...
"notification" = "Notification";
"devices_delete" = "Deleting the device(s) will restore the factory settings, whether to continue?";

"alert_item_continue" = "CONTINUE";
"alert_item_cancel" = "CANCEL";

"sites" = "Sites";
"about" = "About";
"terms_of_service" = "Terms of service";
"welcome" = "Welcome !";
"welcome_message" = "Welcome to use this app for the smart lighting system,enabling installers to do commissioning and testing,and business owners to manage the lighting system.";

"text_length_exceeded" = "Character length exceeded";
...
"done" = "DONE";
"done!" = "Done！";
"add" = "ADD";
"DELETE" = "DELETE";
"confirm" = "CONFIRM";

"all_sites" = "ALL SITES";
"favourites_sites" = "FAVOURITES";

"no_sites_title" = "No Sites!";
"no_sites_message" = "You do not have a site yet, please create a site first.\nA site refers to a collection of multiple spaces.\nYou can:\n- Create sites directly;\n- Import shared sites;";
"no_favourites_sites" = "No Favourites Sites!";
"spaces" = "Spaces";
"space" = "Space";

"all_spaces" = "ALL SPACES";
"favourites_spaces" = "FAVOURITES";
"no_spaces_title" = "No Spaces!";
"no_spaces_message" = "You do not have a space yet, please create a space first.\nA space corresponds to the physical space in reality, and we propose to divide it from functional and physical intervals to achieve optimal communication and effect purposes.\nYou can:\n- Create spaces directly;\n- Import shared spaces;";
"no_favourites_spaces" = "No Favourites Spaces!";
"add_space" = "Add Space";
"main" = "Main";
"group" = "Group";
"scene" = "Scene";
...

"add_device" = "Add Device";
"near" = "NEAR";
"far" = "FAR";
"add_device_to" = "Add Device(s) to";
"scan" = "Scan";
"stop" = "Stop";
"STOP" = "STOP";
"identify" = "Identify";
"identifying" = "Identifying";
"select_all" = "Select all";
"add_selected" = "Add Selected";
"add_result" = "Add Result";
"successfully" = "Successfully";
"successful" = "Successful";
"failed" = "Failed";
"debug" = "Debug";
...
"schedule_defalut_name" = "Schedule ";

"no_groups" = "No Groups!";
"no_groups_message" = "You don‘t have a group yet, please add a group first.";
"create_group" = "Create Group";
"edit_group" = "Edit Group";
"profile" = "Profile";
"create" = "Create";
"CREATE" = "CREATE";
"characters_select_title" = "Select the characters to display";
"members" = "Members";
"group_delete_message" = "After a group is deleted, functions related to the group, such as scenes and schedules, will become unavailable, whether to delete?";
"sync_data" = "Sync data";
"finish" = "FINISH";
"reconfigure" = "RECONFIGURE";
"check" = "Check";
"device_configured_failed_title" = "Some devices fail to be configured. Please reconfigure these devices. \n";
"device_configured_failed_note" = "Note:\n1. Ensure that the device is online;\n2. Ensure that the device signal is good.";
"device_notconnect_message" = "This operation requires the phone's bluetooth connection to the device.";
"re_sync" = "RE-SYNC";
"group_delete_offline" = "All devices are offline and cannot be deleted.At least one device needs to be online.";
"group_delete_failed" = "Failed to delete group";
"group_cannot_select_message" = "You cannot select other group.";
"no_members" = "No Members!";
"group_empty" = "There is no device in the group.";
"group_all_devices_offline" = "All devices offline.";
...
"templates" = "Templates";
"create_scene" = "Create Scene";
"select_icon" = "Select Icon";
"template:" = "Template:";
"scene_prameters_message" = "Select the parameters that make up the scene";
"choose_groups" = "Choose Groups";
"save" = "SAVE";
"PREVIEW" = "PREVIEW";
"scene_select_parameter_message" = "Please select a parameter point";
"scene_parameter_reset_message" = "The modified parameter will be restored to the default parameter.";
"scene_not_groups_message" = "You don‘t have a group yet";
"ok" = "OK";
"scene_delete_message" = "After the scene is deleted, the associated device's scene settings will be cleared. The switch buttons and schedules associated with the scene will be invalid.";
...
"scene_delete_failed" = "failed to delete scene";
"failure" = "Failure";
"remove_device(s)" = "Remove device(s)";
"configuration_device(s)" = "Configuration device(s)";
"configuration" = "Configuration";
"remove" = "Remove";
"sync_device(s)" = "Sync device(s)";
"remove_scene" = "Remove scene";
"remove_schedule" = "Remove schedule";
"remove_from_group" = "Remove from group";
"add_to_group" = "Add to group";
"remove_schedule" = "Remove schedule";
"remove_from_group" = "Remove from group";
...
