...
        
        nameLabel = AdaptiveTextView()
        nameLabel.textColor = Title_Color
        nameLabel.maxFontSize = FontFit(12)
        nameLabel.minFontSize = FontFit(8.5)
        nameLabel.lineHeightMultiple = 0.9
//        UILabel(text: "Group 1", textColor: Title_Color, fontSize: 12, fontWeight: .light)
//        nameLabel.textAlignment = .center
//        nameLabel.lineBreakMode = .byTruncatingHead
        bgView.addSubview(nameLabel)
        nameLabel.snp.makeConstraints { make in
            make.left.equalTo(SCRXFrom(18))
            make.right.equalTo(SCRXFrom(-18))
...
